# axum_credible

./: .pre-commit-config.yaml  .yamlfmt  Cargo.toml  Dockerfile  renovate.json
.gitea/workflows/: ci.yml  deploy.yaml  renovate.yaml
.github/workflows/: ci.yml  deploy.yaml  renovate.yaml
.sqlx/: query-1fe16183f9a92bf421f9bc0cd94cf5bcc2a0eac322067d8a7919f2bbaafbdf0a.json  query-21aba60508434b98e2a54f1e509dd5b817fb07c476f0db56b65df724263fd5b8.json  query-aa609b75e80d4f3c75cdda033b78f0f95cd283fbfadb2b9e58f700b3c41ff999.json  query-b370aa6c2c6a2d2584e5550f03016116cbdff5ce773f2fe3cb7d26330b2f8602.json  query-ecf8dac460848c81d8a54d955a36baf2c3fac8e5d91e0b606e8a0e1a5ce80687.json
migrations/: 20241030155857_init.sql
src/: crypto.rs  database.rs  geo_locate.rs  lib.rs  main.rs  signal.rs  stats.rs
static/: script.js
