[package]
name = "axum_credible"
version = "0.1.1"
edition = "2021"
authors = ["Johannes Heuel <johannes.heuel@rwth-aachen.de>"]
description = "Simple privacy-friendly web analytics"
license = "MIT"

[dependencies]
axum = { version = "0.8.0", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = { version = "0.15" }
flate2 = "1.0.34"
hex = { version = "0.4" }
http = "1"
maxminddb = { version = "0.25" }
minify-js = "0.6.0"
rand_core = { version = "0.9.0", features = ["std", "os_rng"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = { version = "0.10" }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
  "sqlite",
  "time",
] }
tar = "0.4.43"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
woothee = { version = "0.13" }
